--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.2
-uvicorn[standard]==0.22.0
+fastapi==0.111.1
+uvicorn[standard]==0.24.0
 jinja2==3.1.2
-python-multipart==0.0.6
-httpx==0.24.1
+python-dotenv==1.0.1
+groq==0.2.6
